k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cnm
  labels:
    app.kubernetes.io/name: cnm
    environment: dev
